--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <!-- Main Content Section -->
     <div class="content">
         <section class="grades">
+            <div style="text-align: left; margin-bottom: 10px;">
+                <button onclick="window.location.href='https://one.uf.edu';"
+                        style="padding: 8px 16px; font-size: 1rem; background-color: #004b87; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                  Go Back
+                </button>
+              </div>
+              
             <h2>Grades & Transcripts</h2>
             <p><strong>Select Term:</strong></p>
             <select id="term-dropdown" onchange="updateGrades()">
@@ -46,6 +53,13 @@
             </div>
         </section>
     </div>
+
+    <div style="text-align: center; margin: 20px;">
+        <button onclick="window.location.href='https://one.uf.edu';" style="padding: 10px 20px; font-size: 1rem; background-color: #004b87; color: white; border: none; border-radius: 5px; cursor: pointer;">
+          Go Back
+        </button>
+      </div>
+      
 
     <script src="script.js"></script>
     <script>
